--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "ts-pattern": "^5.6.2",
     "vaul": "^0.9.6",
     "viem": "^2.22.17",
     "zod": "^3.24.1"
