--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@ai-sdk/openai": "latest",
     "@hono/zod-validator": "^0.4.2",
     "@hookform/resolvers": "^3.9.1",
+    "@langchain/core": "^0.3.37",
+    "@langchain/groq": "^0.1.3",
+    "@langchain/langgraph": "^0.2.44",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
